Name:                iteratee-compress
Version:             0.1
Synopsis:            A compressing and decompressing iteratees
Description:         A compressing and decompressing iteratees
License:             BSD3
License-file:        LICENSE
Author:              Maciej Piechotka
Maintainer:          uzytkownik2@gmail.com
Copyright:           2010 (c) Maciej Piechotka
Category:            Codec, Data
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2


Library
  Exposed-modules:   Data.Iteratee.ZLib
  Build-depends:     base >= 4 && < 5,
                     bytestring >= 0.9 && < 0.10,
                     iteratee >= 0.4 && < 5,
                     monads-fd >= 0.1 && < 0.2,
                     zlib >= 0.5 && < 6
  Build-tools:       c2hs
  Extensions:        DeriveDataTypeable,
                     ForeignFunctionInterface,
                     ScopedTypeVariables
  Extra-libraries:   z
