Name:                iteratee-compress
Version:             0.3.4
Synopsis:            Enumeratees for compressing and decompressing streams
Description:         Enumeratees for compressing and decompressing streams
License:             BSD3
License-file:        LICENSE
Author:              Maciej Piechotka
Maintainer:          iteratee-compress@tsurucapital.com
Copyright:           2010 (c) Maciej Piechotka
Category:            Codec, Data
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >=1.6

Flag Debug
  Description:       Enable debug support
  Default:           False

Library
  Exposed-modules:   Data.Iteratee.BZip,
                     Data.Iteratee.LZMA,
                     Data.Iteratee.ZLib
  Build-depends:     base >= 4 && < 5,
                     bytestring >= 0.9 && < 0.11,
                     iteratee >= 0.8.4 && < 0.9,
                     lzma-maoe,
                     mtl >= 2.0 && < 2.3,
                     pipes >= 4.1
  Build-tools:       hsc2hs
  Extensions:        CPP,
                     DeriveDataTypeable,
                     ForeignFunctionInterface
  Extra-libraries:   z, bz2
  if flag(debug)
      CPP-Options:   -DDEBUG

Source-Repository head
  Type:              git
  Location:          git://github.com/tsurucapital/iteratee-compress.git
